--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="shortcut icon" href="/voizter37.github.io/server/favicon.ico" /></head>
+  <link rel="shortcut icon" href="/voizter37.github.io/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/voizter37.github.io/server/_expo/static/js/web/entry-302a250676f5824702c77149eef4a672.js" defer></script>
+  <script src="/voizter37.github.io/_expo/static/js/web/entry-c991694ce6c8c99dff3b7c4440cf3e38.js" defer></script>
 </body>
 </html>
